[package]
name = "bw_distance"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
clap.workspace = true

raalog = { git = "https://github.com/AlexanderARodin/raalog.git", branch = "main" }
properties3d = { git = "https://github.com/geomodel/properties3d.git", branch = "main" }
